# crispy

./: .gitignore  README.rst  pyproject.toml  roadmap.md  test.h5  test.xdmf  tmp_profile_dump
assets/: FeAu_0p5_tR_ff1_grains.h5  lab_dct_Al1050.h5
crispy/: __init__.py  _constants.py  _grain_map.py  _lab_dct_volume.py  _polycrystal.py  _read.py  _tdxrd_map.py  _tesselate.py  assets.py  dfxm.py  laue.py  optiang.py  read.py  tesselate.py  vizualise.py
docs/: .buildinfo  Makefile  genindex.html  index.html  make.bat  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_sources/: index.rst.txt
docs/source/: conf.py  index.rst
tests/: debug.py  grain_map.h5  grain_map.xdmf  test_assets.py  test_dfxm.py  test_doc_examples.py  test_lab_dct_volume.py  test_polycrystal.py  test_tdxrd_map.py  test_tesselate.py
tests/saves/: FeAu_0p5_tR_ff1_grains.vtk  FeAu_0p5_tR_ff1_grains.vtk.h5  FeAu_neigh_3.vtk  cropped_lab_dct_volume.h5  cropped_lab_dct_volume.xdmf  filtered_lab_dct_volume.h5  filtered_lab_dct_volume.xdmf  lab_dct_volume.h5  lab_dct_volume.xdmf  pruned_lab_dct_volume.h5  pruned_lab_dct_volume.xdmf  rotated_lab_dct_volume.h5  rotated_lab_dct_volume.xdmf
